ipc/ipdl/test/ipdl/error/AsyncCtorReturnsManagee.ipdl
//error: asynchronous ctor/dtor message `AsyncCtorReturnsManageeConstructor' declares return values

include protocol AsyncCtorReturns;

[ChildProc=any]
protocol AsyncCtorReturnsManagee {
  manager AsyncCtorReturns;

parent:
  async __delete__();
};
